--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,12 +22,12 @@ jobs:
         with:
           java-version: '11'
           
- #     - name: Updating Ubuntu system and Heroku
- #       env: 
- #         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
- #       run: sudo apt update && sudo apt install heroku neofetch
- #     - name: Checking the info
- #       run: neofetch
+      - name: Updating Ubuntu system and Heroku
+        env: 
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+        run: sudo apt update && sudo apt install heroku neofetch
+      - name: Checking the info
+        run: neofetch
 
       - uses: akhileshns/heroku-deploy@v3.8.8
         with:
