--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,19 +16,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Set up JDK 11
+      - name: Set up JDK 8
         uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with:
-          java-version: '11'
-          
-      - name: Updating Ubuntu system and Heroku
-        env: 
-          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-        run: sudo apt update && sudo snap install heroku neofetch
-      - name: Checking the info
-        run: neofetch
-        
+          java-version: 1.8
+
       - uses: akhileshns/heroku-deploy@v3.8.8
         with:
           heroku_email: ${{env.MY_EMAIL}}
